updated mapgive logo to blue in header, but need to fix alignment still

--- a/src/less/main/1-main.less
+++ b/src/less/main/1-main.less
@@ -64,7 +64,11 @@
 }
 
 .mapgive-logo {
-    height:27px;
+    height:24px;
+    margin: 3px;
+    margin-left: 3px;
+    margin-right: 3px;
+    vertical-align: bottom;
 }
 
 #mapgive-logo-padding {
@@ -87,4 +91,9 @@
 .sameline
 {
     display: inline-block;
+}
+
+.navbar-nav > li > a {
+    padding-bottom: 0px;
+    line-height: initial;
 }
